Fixed hover over not showing when link was visited

--- a/styles.css
+++ b/styles.css
@@ -41,17 +41,18 @@ a
     text-decoration: none;
 }
 
+/* Disable color change when link is visited */
+a:visited
+{
+   color: blue;
+}
 /* Link when hovered over */
 a:hover 
 {
     color: hotpink;
 }
 
-/* Disable color change when link is visited */
-a:visited
-{
-   color: inherit;
-}
+
 
 table, th, td
 {
